tests/baselines/reference/plainJSRedeclare.errors.txt
plainJSRedeclare.js(1,7): error TS2451: Cannot redeclare block-scoped variable 'orbitol'.
plainJSRedeclare.js(2,5): error TS2451: Cannot redeclare block-scoped variable 'orbitol'.


==== plainJSRedeclare.js (2 errors) ====
    const orbitol = 1
          ~~~~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'orbitol'.
    var orbitol = 1 + false
        ~~~~~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'orbitol'.
    orbitol.toExponential()
    